# EventSimulationRotationEstimation

./: .gitignore  CMakeLists.txt  DSEC note.txt  README.md  eventFromDataset.cpp  eventFromStream.cpp  eventFromVideo.cpp  yaml_formater.md
config/: config_ECDS.yaml
experiments/: CMakeLists.txt  DISFlow_param.cpp  eventSim_EPS.cpp  eventSim_check.cpp  eventSim_param.cpp
header/: Event.h  EventSimulators.h  OpticalFlowCalculator.h  Player.h  System.h  flowColor.h  numerics.h
source/: CMakeLists.txt  Estimator.cpp  Event.cpp  EventSimulators.cpp  OpticalFlowCalculator.cpp  Player.cpp  System.cpp  Undistortion.cpp  flowColor.cpp  numerics.cpp
toolkits/: CMakeLists.txt  imageToVideo.cpp  rectifyImageOrVideo.cpp  videoCompare.cpp  videoToImage.cpp
